--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -1013,13 +1013,13 @@ contract DateTime {
 \begin{thebibliography}{99999}
 \bibitem[Alex93]{Alex93}{Vladimir Alexiev.} {\em Applications of Linear Logic to Computation: An Overview}, 1993.
 \bibitem[Ser18]{Ser18}{Sergy Nosikov.} {\em What are smart contracts?}\\
-\hyperlink{https://www.cryptoninjas.net/what-are-smart-contracts/}. Truy cập vào 01/6/2018.
+{https://www.cryptoninjas.net/what-are-smart-contracts/}. Truy cập vào 01/6/2018.
 \bibitem[Sza96]{Sza96}{Nick Szabo.} {\em Smart Contracts: Building Blocks for Digital Markets.}. Trên Extropy \#16, 1996.
-\bibitem{Blockgeeks team.}{\em Smart Contracts: The Blockchain Technology That Will Replace Lawyers.}\\ \hyperlink{https://blockgeeks.com/guides/smart-contracts/}. Truy cập vào 01/6/2018.
+\bibitem{Blockgeeks team.}{\em Smart Contracts: The Blockchain Technology That Will Replace Lawyers.}\\ {https://blockgeeks.com/guides/smart-contracts/}. Truy cập vào 01/6/2018.
 \bibitem{Lester Coleman.} {\em Smart Contracts: 12 Use Cases For Business And Beyond.}\\
-\hyperlink{https://www.ccn.com/smart-contracts-12-use-cases-for-business-and-beyond/}. Truy cập vào 01/6/2018.
+{https://www.ccn.com/smart-contracts-12-use-cases-for-business-and-beyond/}. Truy cập vào 01/6/2018.
 \bibitem{Laura Cox.} {\em 5 Applications Of Smart Contracts.}\\
-\hyperlink{https://disruptionhub.com/smart-contract-uses/}. Truy cập vào 01/6/2018.
+{https://disruptionhub.com/smart-contract-uses/}. Truy cập vào 01/6/2018.
 \bibitem{Patrick Lincoln.} {\em Computational Aspects of Linear Logic.} Nhà xuất bản MIT thuộc Viện Công nghệ Massachusetts (1996), trang 2.
 
 \end{thebibliography}
