--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -294,7 +294,7 @@ Phép hội tuyến tính "with" là một phép có trong linear logic nhưng k
 \subsection{Chi tiết và ví dụ về phép tuyển tuyến tính - cộng (linear disjunction - plus)}
 Trong linear logic, phép đối ngẫu của phép $\with$ là phép tuyển tuyến tính - cộng được kí hiệu là $\oplus$. Giống với phép $\lor$ trong logic cổ điển, phép $\oplus$ có nghĩa là hoặc cái này hoặc cái kia.\\
 
-\textbf{Ví dụ \thesubsection.1:} Trong 1 cuộc thi bốc thăm trúng thưởng thì chắc chắnđược 1 trong 2 loại phiếu thăm và phần thưởng tương ứng khi bốc được là "1 chai nước" hay "1 cây bút bi". Cho A là "hành động rút thăm", B là "trúng 1 chai nước suối" và C là "trúng 1 cây bút bi". Khi đó, thì biểu thức $A \multimap B \oplus C$ nghĩa là "khi bốc thăm thì sẽ trúng 1 chai nước hoặc 1 câu bút bi nhưng không biết là cái nào".
+\textbf{Ví dụ \thesubsection.1:} Trong 1 cuộc thi bốc thăm trúng thưởng thì chắc chắnđược 1 trong 2 loại phiếu thăm và phần thưởng tương ứng khi bốc được là "1 chai nước" hay "1 cây bút bi". Cho A là "hành động rút thăm", B là "trúng 1 chai nước suối" và C là "trúng 1 cây bút bi". Khi đó, thì biểu thức $A \multimap B \oplus C$ nghĩa là "khi bốc thăm thì sẽ trúng 1 chai nước hoặc 1 cây bút bi nhưng không biết là cái nào".
 
 \subsection{Chi tiết và ví dụ về phép tuyển tuyến tính (“par”)}
 Đối ngẫu với phép $\otimes$ là phép tuyển tuyến tính $\parr$. Phép $\parr$ tương đối khó hiểu. Biểu thức $A \parr B$ có thể được biểu diễn dưới dạng khác là $A^{\bot} \multimap B$ hay $B^{\bot} \multimap A$. Nó có nghĩa là "phải lựa chọn giữa A và B, không được chọn cả 2".\\
